--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -15,3 +15,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 EditorStartupMap=/Game/Maps/DemoScene.DemoScene
 GameDefaultMap=/Game/Maps/DemoScene.DemoScene
 
+[/Script/Engine.RendererSettings]
+r.GenerateMeshDistanceFields=True
+
